--- a/frontend/src/assets/styles/base/_mixins.scss
+++ b/frontend/src/assets/styles/base/_mixins.scss
@@ -46,6 +46,19 @@
                 left: -4.25rem;
             }
         }
+        &:disabled {
+            cursor: not-allowed;
+            opacity: 0.6;
+
+            &:hover {
+                border: 1px solid rgba(255, 255, 255, 0.08);
+                #circle {
+                    width: 0;
+                    height: 0;
+                    opacity: 0;
+                }
+            }
+        }
     }
 }
 
